ui: TextField designs struct: moving components to Atoms folder storybook: update (7.0.12 -> 1.0.20) & some addons added

--- a/libs/themes/default/_reset.scss
+++ b/libs/themes/default/_reset.scss
@@ -98,6 +98,7 @@ video {
   border: 0;
   font-size: var(--size);
   font-family: var(--primary-font-family);
+  color: var(--text);
   vertical-align: baseline;
 }
 
@@ -171,7 +172,6 @@ blockquote:after,
 q:before,
 q:after {
   content: '';
-  content: none;
 }
 
 table {
