--- a/libs/themes/default/_variables.scss
+++ b/libs/themes/default/_variables.scss
@@ -7,8 +7,11 @@
   --placeholder: #D5D6DB99;
   --stroke: #A9B1D67F;
   --input-shadow: #C0CAF53F;
+  --input-disabled: #D5D6DB3F;
   --success: #9ECE6A;
+  --success-shadow: #9ECE6A7F;
   --error: #F7768E;
+  --error-shadow: #F7768E7F;
 
   --size: 16px;
   --primary-font-family: 'Montserrat', sans-serif;
