--- a/libs/themes/default/app.scss
+++ b/libs/themes/default/app.scss
@@ -16,4 +16,5 @@
 
 // Components
 //===============
-@import 'components/button';
+@import 'components/Atoms/button';
+@import 'components/Atoms/textfield';
