--- a/libs/themes/default/tools/_extends.scss
+++ b/libs/themes/default/tools/_extends.scss
@@ -1,3 +1,19 @@
+.success-color {
+  --state-color: var(--success);
+  --input-shadow: var(--success-shadow);
+  --stroke: var(--success);
+}
+
+.error-color {
+  --state-color: var(--error);
+  --input-shadow: var(--error-shadow);
+  --stroke: var(--error);
+}
+
+%default-state-color {
+  --state-color: var(--input-shadow);
+}
+
 %success-background {
   background: var(--success);
 }
