ui: default checkbox styles fix: some code style in the index.d.ts of ui package

--- a/libs/themes/default/_variables.scss
+++ b/libs/themes/default/_variables.scss
@@ -8,6 +8,7 @@
   --stroke: #A9B1D67F;
   --input-shadow: #C0CAF53F;
   --input-disabled: #D5D6DB3F;
+  --input-disabled-2: #D5D6DB66;
   --success: #9ECE6A;
   --success-shadow: #9ECE6A7F;
   --error: #F7768E;
