--- a/libs/themes/default/app.scss
+++ b/libs/themes/default/app.scss
@@ -18,3 +18,4 @@
 //===============
 @import 'components/Atoms/button';
 @import 'components/Atoms/textfield';
+@import 'components/Atoms/checkbox';
