ui(sd): tick checkbox design

--- a/libs/themes/default/app.scss
+++ b/libs/themes/default/app.scss
@@ -19,3 +19,4 @@
 @import 'components/Atoms/button';
 @import 'components/Atoms/textfield';
 @import 'components/Atoms/checkbox';
+@import 'components/Atoms/tick-checkbox';
