ui(sd): switch checkbox design

--- a/libs/themes/default/app.scss
+++ b/libs/themes/default/app.scss
@@ -20,3 +20,4 @@
 @import 'components/Atoms/textfield';
 @import 'components/Atoms/checkbox';
 @import 'components/Atoms/tick-checkbox';
+@import 'components/Atoms/switch';
