--- a/libs/themes/default/components/Atoms/_checkbox.scss
+++ b/libs/themes/default/components/Atoms/_checkbox.scss
@@ -1,5 +1,7 @@
-// Default checkbox style
-//===============
+/**
+ * This is the default style for the Checkbox component
+ * See the `Checkbox` component in the ui package
+ */
 
 // Label
 //===============
