ui(sd): simple card component

--- a/libs/themes/default/_variables.scss
+++ b/libs/themes/default/_variables.scss
@@ -13,6 +13,7 @@
   --success-shadow: #9ECE6A7F;
   --error: #F7768E;
   --error-shadow: #F7768E7F;
+  --card-shadow: #7AA2F726;
 
   --size: 16px;
   --primary-font-family: 'Montserrat', sans-serif;
