--- a/libs/themes/default/app.scss
+++ b/libs/themes/default/app.scss
@@ -22,3 +22,4 @@
 @import 'components/Atoms/tick-checkbox';
 @import 'components/Atoms/switch';
 @import 'components/Atoms/radio';
+@import 'components/Atoms/cards';
