ui(sd): progress bar designs

--- a/libs/themes/default/_variables.scss
+++ b/libs/themes/default/_variables.scss
@@ -3,6 +3,7 @@
   --background: #1A1B26;
   --background-lighten: #24283B;
   --text: #D5D6DB;
+  --contrast-text: #0f0f14;
   --button-text: #ffffff;
   --placeholder: #D5D6DB99;
   --stroke: #A9B1D67F;
