--- a/libs/themes/default/app.scss
+++ b/libs/themes/default/app.scss
@@ -23,3 +23,4 @@
 @import 'components/Atoms/switch';
 @import 'components/Atoms/radio';
 @import 'components/Atoms/cards';
+@import 'components/Atoms/progress-bar';
