ref(all): add Prettier & ESLint for better code

--- a/libs/themes/default/_variables.scss
+++ b/libs/themes/default/_variables.scss
@@ -1,22 +1,22 @@
 :root {
-  --primary: #7AA2F7;
-  --background: #1A1B26;
-  --background-lighten: #24283B;
-  --text: #D5D6DB;
-  --contrast-text: #0f0f14;
-  --button-text: #ffffff;
-  --placeholder: #D5D6DB99;
-  --stroke: #A9B1D67F;
-  --input-shadow: #C0CAF53F;
-  --input-disabled: #D5D6DB3F;
-  --input-disabled-2: #D5D6DB66;
-  --success: #9ECE6A;
-  --success-shadow: #9ECE6A7F;
-  --error: #F7768E;
-  --error-shadow: #F7768E7F;
-  --card-shadow: #7AA2F726;
+    --primary: #7aa2f7;
+    --background: #1a1b26;
+    --background-lighten: #24283b;
+    --text: #d5d6db;
+    --contrast-text: #0f0f14;
+    --button-text: #ffffff;
+    --placeholder: #d5d6db99;
+    --stroke: #a9b1d67f;
+    --input-shadow: #c0caf53f;
+    --input-disabled: #d5d6db3f;
+    --input-disabled-2: #d5d6db66;
+    --success: #9ece6a;
+    --success-shadow: #9ece6a7f;
+    --error: #f7768e;
+    --error-shadow: #f7768e7f;
+    --card-shadow: #7aa2f726;
 
-  --size: 16px;
-  --primary-font-family: 'Montserrat', sans-serif;
-  --title-font-family: 'Raleway', sans-serif;
+    --size: 16px;
+    --primary-font-family: 'Montserrat', sans-serif;
+    --title-font-family: 'Raleway', sans-serif;
 }
