--- a/libs/themes/default/components/Atoms/_button.scss
+++ b/libs/themes/default/components/Atoms/_button.scss
@@ -3,58 +3,58 @@
  * See the `Button` component in the ui package
  */
 button {
-  width: 100%;
-  background: var(--primary);
-  color: var(--button-text);
-  font-weight: 800;
-  padding: 1rem .5rem;
-  border-radius: calc(var(--size) * .75);
-  position: relative;
-
-  &:before {
-    content: '';
-    position: absolute;
     width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: transparent;
-    transition: background .2s ease-in-out;
-    border-radius: calc(var(--size) * .75);
-  }
-
-  &:hover:not(:disabled)::before,
-  &:focus:not(:disabled)::before {
-    background: rgba(0, 0, 0, .05);
-  }
-
-  &:active:not(:disabled)::before {
-    background: rgba(0, 0, 0, .15);
-  }
-
-  // Success & error variants
-  //===============
-  &.success {
-    @extend %success-background;
-  }
-
-  &.error {
-    @extend %error-background;
-  }
-
-  // Disabled button
-  //===============
-  &.disabled::before,
-  &:disabled::before{
-    background: rgba(0, 0, 0, .2);
-    cursor: not-allowed;
-  }
-
-  // Icon design
-  //===============
-  & i {
-    font-size: var(--size);
-    margin-right: calc(var(--size) * .3);
+    background: var(--primary);
     color: var(--button-text);
-  }
+    font-weight: 800;
+    padding: 1rem 0.5rem;
+    border-radius: calc(var(--size) * 0.75);
+    position: relative;
+
+    &:before {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        background: transparent;
+        transition: background 0.2s ease-in-out;
+        border-radius: calc(var(--size) * 0.75);
+    }
+
+    &:hover:not(:disabled)::before,
+    &:focus:not(:disabled)::before {
+        background: rgba(0, 0, 0, 0.05);
+    }
+
+    &:active:not(:disabled)::before {
+        background: rgba(0, 0, 0, 0.15);
+    }
+
+    // Success & error variants
+    //===============
+    &.success {
+        @extend %success-background;
+    }
+
+    &.error {
+        @extend %error-background;
+    }
+
+    // Disabled button
+    //===============
+    &.disabled::before,
+    &:disabled::before {
+        background: rgba(0, 0, 0, 0.2);
+        cursor: not-allowed;
+    }
+
+    // Icon design
+    //===============
+    & i {
+        font-size: var(--size);
+        margin-right: calc(var(--size) * 0.3);
+        color: var(--button-text);
+    }
 }
