--- a/libs/themes/default/components/Atoms/_progress-bar.scss
+++ b/libs/themes/default/components/Atoms/_progress-bar.scss
@@ -3,47 +3,47 @@
  * See the `ProgressBar` component in the ui package
  */
 .progress-bar {
-  width: 100%;
-  height: calc(var(--progress-size) * 1.75);
-  border: 1px solid var(--stroke);
-  border-radius: calc(var(--progress-size) * 1.75);
-  position: relative;
+    width: 100%;
+    height: calc(var(--progress-size) * 1.75);
+    border: 1px solid var(--stroke);
+    border-radius: calc(var(--progress-size) * 1.75);
+    position: relative;
 }
 
 .progress-bar .progress {
-  height: calc(var(--progress-size) * 1.75);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background: var(--state-color);
-  border-radius: calc(var(--progress-size) * 1.75);
-  position: absolute;
-  top: -1px;
-  left: 0;
-  user-select: none;
-  -webkit-user-select: none;
+    height: calc(var(--progress-size) * 1.75);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: var(--state-color);
+    border-radius: calc(var(--progress-size) * 1.75);
+    position: absolute;
+    top: -1px;
+    left: 0;
+    user-select: none;
+    -webkit-user-select: none;
 
-  transition: .5s ease-in-out;
+    transition: 0.5s ease-in-out;
 
-  &.success-color {
-    color: var(--contrast-text);
-  }
+    &.success-color {
+        color: var(--contrast-text);
+    }
 }
 
 // Color when the state is default
 .progress-bar .progress.default-color {
-  --state-color: var(--primary);
+    --state-color: var(--primary);
 }
 
 // Sizes
 .progress-bar.small {
-  --progress-size: calc(var(--size) * .5);
+    --progress-size: calc(var(--size) * 0.5);
 }
 
 .progress-bar.medium {
-  --progress-size: var(--size);
+    --progress-size: var(--size);
 }
 
 .progress-bar.large {
-  --progress-size: calc(var(--size) * 1.5);
+    --progress-size: calc(var(--size) * 1.5);
 }
