--- a/libs/themes/default/components/Atoms/_radio.scss
+++ b/libs/themes/default/components/Atoms/_radio.scss
@@ -3,51 +3,51 @@
  * See the `RadioButton` component in the ui package
  */
 .radio-container {
-  @extend .checkbox-container;
+    @extend .checkbox-container;
 }
 
 .radio-container .radio-ui {
-  position: relative;
+    position: relative;
 
-  width: calc(var(--size) * 1.5);
-  height: calc(var(--size) * 1.5);
+    width: calc(var(--size) * 1.5);
+    height: calc(var(--size) * 1.5);
 
-  border-radius: 50%;
-  border: calc(var(--size) * .25) solid var(--state-color);
+    border-radius: 50%;
+    border: calc(var(--size) * 0.25) solid var(--state-color);
 }
 
 //Checked design
 .radio-container .radio-ui::before {
-  content: '';
+    content: '';
 
-  display: block;
-  width: 0;
-  height: 0;
+    display: block;
+    width: 0;
+    height: 0;
 
-  border-radius: 50%;
-  background: var(--state-color);
+    border-radius: 50%;
+    background: var(--state-color);
 
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  transition: .1s ease-in-out;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.1s ease-in-out;
 }
 
 .radio-container input:checked + .radio-ui::before {
-  width: calc(var(--size) * .75);
-  height: calc(var(--size) *.75);
+    width: calc(var(--size) * 0.75);
+    height: calc(var(--size) * 0.75);
 }
 
 //Disabled design
 .radio-container.radio-disabled {
-  cursor: not-allowed;
+    cursor: not-allowed;
 }
 
 .radio-container.radio-disabled .radio-ui {
-  background: var(--input-disabled-2);
+    background: var(--input-disabled-2);
 }
 
 .radio-container .radio-ui.default-color {
-  --state-color: var(--primary);
+    --state-color: var(--primary);
 }
